--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,19 @@
-
 language: node_js
-node_js:
-  - "10"
-script:npm test
+# nodejs版本
+node_js: 
+    - '6'
+
+# S: Build Lifecycle
+install:
+  - npm install
+
+before_script:
+
+# 无其他依赖项所以执行npm run build 构建就行了
+script:
+  - npm test
+
+#指定分支，只有指定的分支提交时才会运行脚本
+branches:
+  only:
+    - master
